<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
   <EditTextPreference
       android:key="@string/pref_location_key"
       android:title="@string/pref_location_title"
       android:dialogTitle="@string/pref_location_dialog_title"
       android:summary="@string/pref_location_summary"
       android:defaultValue="@string/pref_location_default"
       android:singleLine="true"
       android:inputType="text"/>
    <ListPreference
        android:key="@string/pref_temperature_unit_key"
        android:title="@string/pref_temperature_unit_title"
        android:dialogTitle="@string/pref_temperature_unit_dialog_title"
        android:entries="@array/pref_temperature_unit_entries"
        android:entryValues="@array/pref_temperature_unit_entry_values"
        android:defaultValue="@string/pref_temperature_unit_celsius" />
</PreferenceScreen>